fix: updated nur wenn neue Angebote gecralled wurden